--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 /* Reset default styles */
 #root {
   max-width: 100%;
@@ -13,11 +12,11 @@ body {
 
 /* Flag colors for Algeria */
 .flag-red {
-  color: #cc2828;
+  color: #4A90E2;
 }
 
 .flag-green {
-  color: #147828;
+  color: #F4D03F;
 }
 
 .rtl {
